# dpCUDA-v2

./: .cursorignore  .gitignore  CMakeLists.txt  grace_CMakeLists.txt  main  main.cpp  makefile  todo.txt
include/: Constants.h  DPM2D.h  constants.h  cudaKernel.cuh  cuda_constants.cuh  defs.h  disk.h  functors.h  particle.h
include/data/: array_data.h  data_1d.h  data_2d.h  data_array.h
include/integrator/: adam.h  damped_nve.h  fire.h  grad_desc.h  integrator.h  nve.h
include/io/: arg_parsing.h  base_log_groups.h  base_log_groups_impl.h  console_log.h  console_log_impl.h  energy_log.h  energy_log_impl.h  file_manager.h  io_manager.h  io_manager_impl.h  io_utils.h  log_groups.h  log_manager.h  logger.h  old_fileio.h  orchestrator.h  state_log.h  state_log_impl.h  utils.h
include/kernels/: CudaConstants.cuh  Globals.cuh  UtilityKernels.cuh  VertexShapeInitializers.cuh  contacts.cuh  dynamics.cuh  general.cuh  kernels.cuh
include/particle/: config.h  disk.h  particle.h  particle_factory.h  rigid_bumpy.h
include/particles/: Disk.cuh  Particle.cuh  Particle.h  config.h  factory.h  particle_factory.h  standard_configs.h
include/particles/base/: config.h  kernels.cuh  particle.h
include/particles/disk/: config.h  disk.h  kernels.cuh
include/particles/rigid_bumpy/: config.h  kernels.cuh  rigid_bumpy.h
include/routines/: compression.h  initialization.h  minimization.h  quench.h
include/utils/: config_dict.h  general.h  thread_pool.h
old/: ellipse.cu  ellipse.h  energy.csv  io_manager.cu  io_manager.h  log_groups.py
old/system/: config.json  console_log_config.json  energy.csv  energy_log_config.json  integrator_config.json  particle_config.json  state_log_config.json
old/trajectories/t0/: positions.txt  velocities.txt
old/trajectories/t10/: positions.txt  velocities.txt
old/trajectories/t100/: positions.txt  velocities.txt
old/trajectories/t1000/: positions.txt  velocities.txt
old/trajectories/t10000/: positions.txt  velocities.txt
old/trajectories/t10010/: positions.txt  velocities.txt
old/trajectories/t10020/: positions.txt  velocities.txt
old/trajectories/t10030/: positions.txt  velocities.txt
old/trajectories/t10040/: positions.txt  velocities.txt
old/trajectories/t10050/: positions.txt  velocities.txt
old/trajectories/t10060/: positions.txt  velocities.txt
old/trajectories/t10070/: positions.txt  velocities.txt
old/trajectories/t10080/: positions.txt  velocities.txt
old/trajectories/t10090/: positions.txt  velocities.txt
old/trajectories/t1010/: positions.txt  velocities.txt
old/trajectories/t10100/: positions.txt  velocities.txt
old/trajectories/t1020/: positions.txt  velocities.txt
old/trajectories/t10200/: positions.txt  velocities.txt
old/trajectories/t1030/: positions.txt  velocities.txt
old/trajectories/t10300/: positions.txt  velocities.txt
old/trajectories/t1040/: positions.txt  velocities.txt
old/trajectories/t10400/: positions.txt  velocities.txt
old/trajectories/t1050/: positions.txt  velocities.txt
old/trajectories/t10500/: positions.txt  velocities.txt
old/trajectories/t1060/: positions.txt  velocities.txt
old/trajectories/t10600/: positions.txt  velocities.txt
old/trajectories/t1070/: positions.txt  velocities.txt
old/trajectories/t10700/: positions.txt  velocities.txt
old/trajectories/t1080/: positions.txt  velocities.txt
old/trajectories/t10800/: positions.txt  velocities.txt
old/trajectories/t1090/: positions.txt  velocities.txt
old/trajectories/t10900/: positions.txt  velocities.txt
old/trajectories/t1100/: positions.txt  velocities.txt
old/trajectories/t11000/: positions.txt  velocities.txt
old/trajectories/t11010/: positions.txt  velocities.txt
old/trajectories/t11020/: positions.txt  velocities.txt
old/trajectories/t11030/: positions.txt  velocities.txt
old/trajectories/t11040/: positions.txt  velocities.txt
old/trajectories/t11050/: positions.txt  velocities.txt
old/trajectories/t11060/: positions.txt  velocities.txt
old/trajectories/t11070/: positions.txt  velocities.txt
old/trajectories/t11080/: positions.txt  velocities.txt
old/trajectories/t11090/: positions.txt  velocities.txt
old/trajectories/t11100/: positions.txt  velocities.txt
old/trajectories/t11200/: positions.txt  velocities.txt
old/trajectories/t11300/: positions.txt  velocities.txt
old/trajectories/t11400/: positions.txt  velocities.txt
old/trajectories/t11500/: positions.txt  velocities.txt
scripts/: OLD_disk_pool.cpp  OLD_jam.cpp  OLD_main.cpp  OLD_replica_test.cpp  calcPairCorr.cpp  configurationalMonteCarlo.cpp  configurationalMonteCarloInCage.cpp  create.cpp  disk_pool.cpp  fast_jam.cpp  jam.cpp  main.cpp  postProcCalc.cpp  rb_damped_jam.cpp  rb_jam.cpp  rb_pool.cpp  runAdam.cpp  runArthurJam.cpp  runArthurJamWithAdam.cpp  runArthurJamWithFire.cpp  runArthurJamWithFireAndPE.cpp  runCompress.cpp  runCreateSamplesNVE.cpp  runCreateSamplesRescaleNVT.cpp  runDampedJam.cpp  runFire.cpp  runICPPack.cpp  runJam.cpp  runNVE.cpp  runQuenchNVE.cpp  runRescaleNVT.cpp  runShortNVE.cpp  runSingleNVECompression.cpp  runThermalCompression.cpp  test.cpp  testParallelNVE.cpp  test_array_data.cpp  test_create_disk.cpp  test_create_rigid_bumpy.cpp  test_load.cpp  (+4 more)
scripts/old/: OLD_rb_jam.cpp  OLD_test_load.cpp  jam.cpp  run_nve.cpp
src/: DPM2D.cu  disk.cu  particle.cu
src/data/: data_1d.cu  data_2d.cu  data_array.cu
src/integrator/: adam.cu  contacts.cu  damped_nve.cu  fire.cu  grad_desc.cu  integrator.cu  nve.cu
src/io/: base_log_groups.cu  console_log.cu  energy_log.cu  file_manager.cu  io_manager.cu  io_utils.cu  log_groups.cu  log_manager.cu  logger.cu  orchestrator.cu  state_log.cu  utils.cu
src/kernels/: UtilityKernels.cu  VertexShapeInitializers.cu  dynamics.cu  general.cu  kernels.cu
src/particle/: config.cu  disk.cu  particle.cu  particle_factory.cu  rigid_bumpy.cu
src/particles/: Disk.cu  Particle.cu  config.cu  particle_factory.cu
src/routines/: compression.cu  initialization.cu  minimization.cu  quench.cu
src/utils/: thread_pool.cpp
(+3710 files in other folders)
